--- a/Project0/TempMohit/Uis/PlaceOrderUi.xaml
+++ b/Project0/TempMohit/Uis/PlaceOrderUi.xaml
@@ -87,14 +87,14 @@
     </sap:WorkflowViewStateService.ViewState>
     <ui:InvokeWorkflowFile ContinueOnError="{x:Null}" DisplayName="Invoke ClientLogin TEMPORARY" sap:VirtualizedContainerService.HintSize="565,112" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_4" UnSafe="False" WorkflowFileName="TempMohit\Features\ClientLogin.xaml">
       <ui:InvokeWorkflowFile.Arguments>
-        <OutArgument x:TypeArguments="x:Int32" x:Key="clientId">
-          <mva:VisualBasicReference x:TypeArguments="x:Int32" ExpressionText="clientId" />
-        </OutArgument>
+        <OutArgument x:TypeArguments="x:Int32" x:Key="clientId">[clientId]</OutArgument>
       </ui:InvokeWorkflowFile.Arguments>
     </ui:InvokeWorkflowFile>
     <ui:InvokeWorkflowFile ContinueOnError="{x:Null}" DisplayName="Invoke ClientSelectVendorMenu workflow" sap:VirtualizedContainerService.HintSize="565,112" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_2" UnSafe="False" WorkflowFileName="TempMohit\Uis\ClientSelectVendorMenu.xaml">
       <ui:InvokeWorkflowFile.Arguments>
-        <OutArgument x:TypeArguments="scg:ISet(x:String)" x:Key="menuReturn">[vendors]</OutArgument>
+        <OutArgument x:TypeArguments="scg:ISet(x:String)" x:Key="menuReturn">
+          <mva:VisualBasicReference x:TypeArguments="scg:ISet(x:String)" ExpressionText="vendors" />
+        </OutArgument>
       </ui:InvokeWorkflowFile.Arguments>
     </ui:InvokeWorkflowFile>
     <WriteLine DisplayName="Write Line" sap:VirtualizedContainerService.HintSize="565,61" sap2010:WorkflowViewState.IdRef="WriteLine_1" Text="log: vendors selected:" />
@@ -174,6 +174,9 @@
         <OutArgument x:TypeArguments="sd:DataTable" x:Key="orderPlaced">
           <mva:VisualBasicReference x:TypeArguments="sd:DataTable" ExpressionText="orderPlaced" />
         </OutArgument>
+        <InArgument x:TypeArguments="sd:DataTable" x:Key="products">
+          <mva:VisualBasicValue x:TypeArguments="sd:DataTable" ExpressionText="products" />
+        </InArgument>
       </ui:InvokeWorkflowFile.Arguments>
     </ui:InvokeWorkflowFile>
   </Sequence>
