As far as I got on my own

--- a/Project0/MVP/PlaceOrder.xaml
+++ b/Project0/MVP/PlaceOrder.xaml
@@ -92,7 +92,7 @@
         <OutArgument x:TypeArguments="x:String">[findVendor]</OutArgument>
       </ui:InputDialog.Result>
     </ui:InputDialog>
-    <ui:ReadRange DataTable="{x:Null}" AddHeaders="True" DisplayName="Read Range" sap:VirtualizedContainerService.HintSize="713,87" sap2010:WorkflowViewState.IdRef="ReadRange_3" Range="A1:Z99" SheetName="Sheet1" WorkbookPath="DataSpreadsheet\Vendor.xlsx" />
+    <ui:ReadRange DataTable="{x:Null}" AddHeaders="True" DisplayName="Read Range" sap:VirtualizedContainerService.HintSize="713,87" sap2010:WorkflowViewState.IdRef="ReadRange_3" Range="A1:Z99" SheetName="Sheet1" WorkbookPath="DataSpreadsheet\RoSADatasheet.xlsx" />
     <ui:LookupDataTable CellValue="{x:Null}" LookupColumnIndex="{x:Null}" LookupDataColumn="{x:Null}" RowIndex="{x:Null}" TargetColumnIndex="{x:Null}" TargetColumnName="{x:Null}" TargetDataColumn="{x:Null}" DataTable="[VendorList]" DisplayName="Lookup Data Table" sap:VirtualizedContainerService.HintSize="713,22" sap2010:WorkflowViewState.IdRef="LookupDataTable_1" LookupColumnName="Shopping List" LookupValue="[findVendor]" />
     <If Condition="[found = True]" sap:VirtualizedContainerService.HintSize="713,260" sap2010:WorkflowViewState.IdRef="If_1">
       <If.Then>
